# internal/interfaces/api/dto/user_dto.go
@@ -68,7 +68,8 @@ type UploadVerifiedPassportRequest struct {
 
 // CheckVerifiedPassport
 type CheckVerifiedPassportRequest struct {
-	UserID int64 `json:"user_id"`
+	UserID        int64 `json:"userId" binding:"required"`
+	IsVerificated bool  `json:"isVerificated"`
 }
 
 type CheckVerifiedPassportResponse struct {
